#1697: Added GeoCodeAlias object and queries