@@ -22,39 +22,40 @@ import com.echothree.model.control.geo.server.control.GeoControl;
 import com.echothree.model.control.party.common.PartyTypes;
 import com.echothree.model.control.security.common.SecurityRoleGroups;
 import com.echothree.model.control.security.common.SecurityRoles;
-import com.echothree.model.data.user.common.pk.UserVisitPK;
+import com.echothree.model.data.geo.server.entity.GeoCode;
+import com.echothree.model.data.geo.server.entity.GeoCodeAlias;
+import com.echothree.model.data.geo.server.factory.GeoCodeAliasFactory;
+import com.echothree.util.common.command.BaseResult;
 import com.echothree.util.common.message.ExecutionErrors;
 import com.echothree.util.common.validation.FieldDefinition;
 import com.echothree.util.common.validation.FieldType;
-import com.echothree.util.common.command.BaseResult;
-import com.echothree.util.server.control.BaseSimpleCommand;
+import com.echothree.util.server.control.BasePaginatedMultipleEntitiesCommand;
 import com.echothree.util.server.control.CommandSecurityDefinition;
 import com.echothree.util.server.control.PartyTypeDefinition;
 import com.echothree.util.server.control.SecurityRoleDefinition;
-import com.echothree.util.server.persistence.Session;
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.Collection;
 import java.util.List;
 import javax.enterprise.context.Dependent;
+import javax.inject.Inject;
 
 @Dependent
 public class GetGeoCodeAliasesCommand
-        extends BaseSimpleCommand<GetGeoCodeAliasesForm> {
+        extends BasePaginatedMultipleEntitiesCommand<GeoCodeAlias, GetGeoCodeAliasesForm> {
 
     private final static CommandSecurityDefinition COMMAND_SECURITY_DEFINITION;
     private final static List<FieldDefinition> FORM_FIELD_DEFINITIONS;
 
     static {
-        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(Collections.unmodifiableList(Arrays.asList(
+        COMMAND_SECURITY_DEFINITION = new CommandSecurityDefinition(List.of(
                 new PartyTypeDefinition(PartyTypes.UTILITY.name(), null),
-                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), Collections.unmodifiableList(Arrays.asList(
+                new PartyTypeDefinition(PartyTypes.EMPLOYEE.name(), List.of(
                         new SecurityRoleDefinition(SecurityRoleGroups.GeoCodeAlias.name(), SecurityRoles.List.name())
-                        )))
-                )));
-
-        FORM_FIELD_DEFINITIONS = Collections.unmodifiableList(Arrays.asList(
-                new FieldDefinition("GeoCodeName", FieldType.ENTITY_NAME, true, null, null)
+                        ))
                 ));
+
+        FORM_FIELD_DEFINITIONS = List.of(
+                new FieldDefinition("GeoCodeName", FieldType.ENTITY_NAME, true, null, null)
+                );
     }
 
     /** Creates a new instance of GetGeoCodeAliasesCommand */
@@ -62,20 +63,47 @@ public class GetGeoCodeAliasesCommand
         super(COMMAND_SECURITY_DEFINITION, FORM_FIELD_DEFINITIONS, true);
     }
 
-    @Override
-    protected BaseResult execute() {
-        var geoControl = Session.getModelController(GeoControl.class);
-        var result = GeoResultFactory.getGetGeoCodeAliasesResult();
-        var geoCodeName = form.getGeoCodeName();
-        var geoCode = geoControl.getGeoCodeByName(geoCodeName);
+    @Inject
+    GeoControl geoControl;
 
-        if(geoCode != null) {
-            result.setGeoCode(geoControl.getGeoCodeTransfer(getUserVisit(), geoCode));
-            result.setGeoCodeAliases(geoControl.getGeoCodeAliasTransfersByGeoCode(getUserVisit(), geoCode));
-        } else {
+    GeoCode geoCode;
+
+    @Override
+    protected void handleForm() {
+        var geoCodeName = form.getGeoCodeName();
+
+        geoCode = geoControl.getGeoCodeByName(geoCodeName);
+
+        if(geoCode == null) {
             addExecutionError(ExecutionErrors.UnknownGeoCodeName.name(), geoCodeName);
         }
+    }
 
+    @Override
+    protected Long getTotalEntities() {
+        return geoCode == null ? null : geoControl.countGeoCodeAliasesByGeoCode(geoCode);
+    }
+
+    @Override
+    protected Collection<GeoCodeAlias> getEntities() {
+        return geoCode == null ? null : geoControl.getGeoCodeAliasesByGeoCode(geoCode);
+    }
+
+    @Override
+    protected BaseResult getResult(Collection<GeoCodeAlias> entities) {
+        var result = GeoResultFactory.getGetGeoCodeAliasesResult();
+
+        if(entities != null) {
+            var userVisit = getUserVisit();
+
+            result.setGeoCode(geoControl.getGeoCodeTransfer(userVisit, geoCode));
+
+            if(session.hasLimit(GeoCodeAliasFactory.class)) {
+                result.setGeoCodeAliasCount(getTotalEntities());
+            }
+
+            result.setGeoCodeAliases(geoControl.getGeoCodeAliasTransfers(userVisit, entities));
+        }
 
         return result;
     }
